updated graphics & removed NoWinActivity + dependents

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".NoWinActivity" />
+        <activity android:name=".GameActivities.GameActivity" />
         <activity android:name=".HowToPlayActivity" />
-        <activity android:name=".NormalGameActivity" />
-        <activity android:name=".EasyGameActivity" />
+        <activity android:name=".GameActivities.NormalGameActivity" />
+        <activity android:name=".GameActivities.EasyGameActivity" />
         <activity android:name=".SelectActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
